# phonon_rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/bevy_phonon/: Cargo.toml  README.md
crates/bevy_phonon/examples/: minimal.rs
crates/bevy_phonon/src/: debug.rs  lib.rs  phonon_plugin.rs
crates/bevy_phonon/src/debug/: diagnostics.rs  gizmos.rs  mod.rs
crates/bevy_phonon/src/phonon_mesh/: instancing.rs  material.rs  mesh.rs  mod.rs
crates/bevy_phonon_demo/: Cargo.toml  README.md
crates/bevy_phonon_demo/assets/audio/: ATTRIBUTION.txt
crates/bevy_phonon_demo/assets/text/: distance_effects.md  intro.md
crates/bevy_phonon_demo/src/: camera_controller.rs  graphics.rs  main.rs  scene_switching.rs  water.rs
crates/bevy_phonon_demo/src/scenes/: directivity.rs  distance_effects.rs  intro.rs  materials.rs  mod.rs  occlusion.rs
crates/firewheel_phonon/: Cargo.toml  README.md
crates/firewheel_phonon/examples/: eq_effect.rs  spatializer_effect.rs
crates/firewheel_phonon/src/: lib.rs
crates/firewheel_phonon/src/effects/: spatializer.rs
crates/fmod_plugin/: Cargo.toml
crates/phonon/: Cargo.toml  README.md
crates/phonon-firewheel/: Cargo.toml
crates/phonon-firewheel/examples/: eq_effect.rs  spatializer_effect.rs
crates/phonon-firewheel/src/: fixed_block.rs  lib.rs  spatializer_effect.rs
crates/phonon-firewheel/src/effects/: eq.rs  mod.rs
crates/phonon-firewheel/src/eq_effect/: mod.rs
crates/phonon-fmod/: Cargo.toml  README.md  build.rs  phonon_fmod.plugin.js
crates/phonon-fmod/examples/: create_dsp.rs  manual_registration.rs  playground.rs
crates/phonon-fmod/headers/: fmod_common.h
crates/phonon-fmod/src/: callbacks.rs  ffi.rs  fmod_state.rs  lib.rs  parameter_init.rs  parameter_spec.rs
crates/phonon-kira/: Cargo.toml  README.md
crates/phonon-kira/examples/: direct_effect.rs  direct_simulation.rs  eq_effect.rs  reverb_effect.rs  spatializer_effect.rs
crates/phonon-kira/src/: lib.rs
crates/phonon-kira/src/direct_effect/: builder.rs  effect.rs  handle.rs  mod.rs
crates/phonon-kira/src/eq_effect/: builder.rs  effect.rs  handle.rs  mod.rs
crates/phonon-kira/src/reverb_effect/: builder.rs  effect.rs  handle.rs  mod.rs
crates/phonon-kira/src/spatializer_effect/: effect.rs  handle.rs  mod.rs
crates/phonon/benches/: audio_buffer_bench.rs  direct_effect_bench.rs  panning_bench.rs  reverb_bench.rs
crates/phonon/examples/: eq_effect.rs
crates/phonon/src/: air_absorption.rs  array.rs  audio_buffer.rs  bands.rs  context.rs  coordinate_space.rs  delay.rs  direct_effect.rs  direct_simulator.rs  directivity.rs  distance_attenuation.rs  eq_effect.rs  gain_effect.rs  hit.rs  hrtf.rs  hrtf_database.rs  hrtf_map.rs  iir.rs  instanced_mesh.rs  lib.rs  material.rs  mesh.rs  panning_effect.rs  polar_vector.rs  propagation_medium.rs  ray.rs  reverb_effect.rs  reverb_estimator.rs  sampling.rs  scene.rs  simulation_data.rs  speaker_layout.rs  sphere.rs  static_mesh.rs  triangle.rs  util.rs
crates/phonon/src/dsp/: audio_buffer.rs  delay.rs  iir.rs  mod.rs  reverb_estimator.rs  speaker_layout.rs
crates/phonon/src/effects/: ambisonics_binarual.rs  binaural.rs  direct.rs  direct_effect.rs  eq.rs  gain.rs  mod.rs  overlap_add_convolution.rs  panning.rs  reverb.rs
crates/phonon/src/models/: air_absorption.rs  directivity.rs  mod.rs
crates/phonon/src/scene/: coordinate_space.rs  hit.rs  instanced_mesh.rs  material.rs  mesh.rs  mod.rs  sampling.rs  scene.rs  sphere.rs  static_mesh.rs
crates/phonon/src/simulators/: direct.rs  direct_simulator.rs  mod.rs
crates/phonon/tests/: array_test.rs  audio_buffer_test.rs  coordinate_space_test.rs  iir_filter_test.rs  triangle.rs  vector_test.rs
crates/phonon_bevy/: Cargo.toml
crates/phonon_bevy/examples/: minimal.rs
crates/phonon_bevy/src/: lib.rs  phonon_plugin.rs
crates/phonon_bevy/src/phonon_mesh/: instancing.rs  material.rs  mesh.rs  mod.rs
crates/phonon_firewheel/: Cargo.toml
crates/phonon_firewheel/src/effects/: eq.rs  spatializer.rs
crates/steam_audio/benches/: audio_buffer_bench.rs
crates/steam_audio/src/: audio_buffer.rs  bands.rs  coordinate_space.rs  delay.rs  lib.rs  reverb_estimator.rs
crates/steam_audio/tests/: array_test.rs  coordinate_space_test.rs  vector_test.rs
