[workspace]
members = [
    "crates/*",
]

resolver = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
avian3d = { git = "https://github.com/avianphysics/avian" }
