[package]
categories = ["multimedia::audio"]
description = "Bevy integration for the unofficial Steam Audio Rust rewrite"
documentation = "https://docs.rs/bevy_phonon"
edition = "2024"
license = "Apache-2.0"
name = "bevy_phonon"
readme = "README.md"
repository = "https://github.com/GitGhillie/phonon_rs"
version = "0.2.0"

[features]
debug = []

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "bevy_asset",
  "bevy_mesh",
] }
bevy_seedling = { version = "0.7.0", default-features = false, features = [
  "ogg",
] }
firewheel_phonon = { path = "../firewheel_phonon", version = "0.2", features = [
  "bevy",
] }

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
"default_app",
"default_platform",
"3d_bevy_render",
"scene",
] }
