[package]
name = "bevy_phonon_demo"
version = "0.2.0"
edition = "2024"
categories = ["multimedia::audio"]
license = "Apache-2.0"
description = "Demo for the Bevy integration for the unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"
documentation = "https://docs.rs/bevy_phonon"
readme = "README.md"
publish = false

[dependencies]
bevy_seedling = { version = "0.6.0", default-features = false }
# Bevy without audio features, as that's handled by bevy_seedling
bevy = { version = "0.17", default-features = false, features = [
  "animation",
  "bevy_anti_alias",
  "bevy_post_process",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_log",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite_picking_backend",
  "bevy_sprite",
  "bevy_state",
  "bevy_text",
  "bevy_ui_picking_backend",
  "bevy_ui",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "reflect_auto_register",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "x11",
  "zstd_rust",
] }
bevy_phonon = { path = "../bevy_phonon", version = "0.2", features = [] }
bevy_skein = "0.3"
bevy_editor_cam = { git = "https://github.com/TotalKrill/bevy_editor_cam", branch = "0.17" }
bevy-inspector-egui = "0.35.0"
