[package]
categories = ["multimedia::audio"]
description = "Demo for the Bevy integration for the unofficial Steam Audio Rust rewrite"
documentation = "https://docs.rs/bevy_phonon"
edition = "2024"
license = "Apache-2.0"
name = "bevy_phonon_demo"
publish = false
readme = "README.md"
repository = "https://github.com/GitGhillie/phonon_rs"
version = "0.2.0"

[dependencies]
bevy_seedling = { version = "0.6.0", default-features = false, features = [
  "ogg",
] }
# Bevy without audio features, as that's handled by bevy_seedling
bevy = { version = "0.17", default-features = false, features = [
  "animation",
  "bevy_anti_alias",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_log",
  "bevy_pbr",
  "bevy_picking",
  "bevy_post_process",
  "bevy_render",
  "bevy_scene",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "reflect_auto_register",
  "smaa_luts",
  "std",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "x11",
  "zstd_rust",
] }
bevy-inspector-egui = "0.35.0"
bevy_asset_loader = "0.24.0-rc.1"
bevy_phonon = { path = "../bevy_phonon", version = "0.2", features = [] }
bevy_skein = "0.3"
rust-embed = "8.9"
bevy_ahoy = { git = "https://github.com/janhohenheim/bevy_ahoy", branch = "main" }
bevy_enhanced_input = { version = "0.20", default-features = false }
avian3d = "0.4"
phonon = { path = "../phonon" } # Needed for visualisations
