[package]
categories = ["multimedia::audio"]
description = "Demo for the Bevy integration for the unofficial Steam Audio Rust rewrite"
documentation = "https://docs.rs/bevy_phonon"
edition = "2024"
license = "Apache-2.0"
name = "bevy_phonon_demo"
publish = false
readme = "README.md"
repository = "https://github.com/GitGhillie/phonon_rs"
version = "0.2.0"

[dependencies]
bevy_seedling = { version = "0.7.0", default-features = false, features = [
  "ogg",
] }
bevy_phonon = { path = "../bevy_phonon", version = "0.2", features = ["debug"] }
phonon = { path = "../phonon" } # Needed for visualisations
# Bevy without audio features, as that's handled by bevy_seedling
bevy = { version = "0.18", default-features = false, features = [
  "bevy_anti_alias",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gizmos_render",
  "bevy_gltf",
  "bevy_log",
  "bevy_pbr",
  "bevy_picking",
  "bevy_post_process",
  "bevy_render",
  "bevy_scene",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "reflect_auto_register",
  "smaa_luts",
  "std",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "x11",
  "zstd_rust",
  "free_camera",
] }
bevy-inspector-egui = "0.36.0"
bevy_asset_loader = "0.25.0"
bevy_skein = "0.5"
rust-embed = "8.9"
avian3d = { version = "0.5", default-features = false, features = [
    "3d",
    "f32",
    "parry-f32",
    "parallel",
    "collider-from-mesh",
    "bevy_scene",
] }
