[package]
name = "firewheel_phonon"
version = "0.2.0"
edition = "2024"
categories = ["multimedia::audio"]
license = "Apache-2.0"
description = "Firewheel integration for the unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"
documentation = "https://docs.rs/firewheel_phonon"
readme = "README.md"

[features]
bevy = []

[dependencies]
phonon = { path = "../phonon", version = "0.2", features = ["firewheel"] }
firewheel = "0.8.0-rc.1"
prealloc_ref_vec = "0.1"
bevy_ecs = { version = "0.17", default-features = false }

[dev-dependencies]
eframe = { version = "0.33", default-features = false, features = [
  "default_fonts",
  "glow",
  "wayland",
  "x11",
] }
symphonium = { version = "0.6", default-features = false, features = [
    "ogg", "opt-simd"
] }
glam = "0.30"
