[package]
name = "phonon-firewheel"
version = "0.1.0"
edition = "2024"
categories = ["multimedia::audio"]
license = "Apache-2.0"
description = "Firewheel integration for the unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"
documentation = "https://docs.rs/phonon-firewheel"
readme = "README.md"

[dependencies]
phonon = { path = "../phonon", version = "0.2" }
firewheel = "0.8.0-rc.1"
prealloc_ref_vec = "0.1"

[dev-dependencies]
eframe = "0.32"
glam = "0.29"
symphonium = "0.6"