[package]
name = "phonon-fmod"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "FMOD integration for the unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"

[lib]
crate-type = ["cdylib"] #, "lib"

[dependencies]
libfmod = "~2.222.3"
#libfmod = { path = "../../../libfmod/libfmod" }

[[example]]
name = "manual_registration"

[[example]]
name = "create_dsp"