[package]
name = "phonon-fmod"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "FMOD integration for the unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
phonon = { path = "../phonon" }
libfmod = "~2.222.4"
glam = "0.27" # todo how do we ensure the same version is used accross the different crates in the workspace?
strum = { version = "0.26", features = ["derive"] }

[[example]]
name = "manual_registration"

[[example]]
name = "create_dsp"
