[package]
name = "phonon-kira"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Kira integration for the unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"

[dependencies]
phonon = { path = "../phonon" }
kira = { version = "0.9", features = ["serde"] }

[dev-dependencies]
eframe = "0.27"
bevy = "0.13"
parry3d = "0.13" # todo: get rid of this
bevy_flycam = "0.13"
bevy-kira-components = { git = "https://github.com/GitGhillie/bevy-kira-components.git", rev = "e179aba" }
