[package]
name = "phonon-kira"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Kira integration for the unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"

[dependencies]
phonon = { path = "../phonon" }
kira = { version = "0.9", features = ["serde"] }

[dev-dependencies]
eframe = "0.27"
