[package]
name = "phonon-kira"
version = "0.2.0"
edition = "2021"
categories = ["multimedia::audio"]
license = "Apache-2.0"
description = "Kira integration for the unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"
documentation = "https://docs.rs/phonon-kira"
readme = "README.md"

[dependencies]
phonon = { path = "../phonon", version = "0.2" }
kira = { version = "0.9", features = ["serde"] }

[dev-dependencies]
eframe = "0.27"
