[package]
name = "phonon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"

[dependencies]
derive_deref = "1"
glam = "0.25"
biquad = "0.4"
rand = "0.8"
ndarray = "0.15"
parry3d = "0.13" # todo: Enable SIMD? Replace with glam-based parry?
nalgebra = { version = "0.32", features = ["default", "convert-glam025"] } # todo: Replace with glam after replacing parry3d
bitflags = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
plotters = "0.3"

[[bench]]
name = "audio_buffer_bench"
harness = false

[[bench]]
name = "direct_effect_bench"
harness = false