[package]
name = "phonon"
version = "0.2.0"
edition = "2021"
categories = ["multimedia::audio"]
license = "Apache-2.0"
description = "Unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"
documentation = "https://docs.rs/phonon"
readme = "README.md"

[features]
default = []
serde-serialize = ["dep:serde", "parry3d/serde-serialize", "ndarray/serde"]
reflect = ["dep:bevy_reflect"]

[dependencies]
derive_deref = "1"
glam = "0.27"
biquad = "0.4"
rand = "0.8"
ndarray = "0.15"
parry3d = "0.13" # todo: Enable SIMD? Replace with glam-based parry?
nalgebra = { version = "0.32", features = ["default", "convert-glam027"] } # todo: Replace with glam after replacing parry3d
bitflags = "2"
ultraviolet = "0.9"
serde = { version = "1", optional = true }
bevy_reflect = { version = "0.14", optional = true }
sofar = "0.2.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
plotters = "0.3"
rand = "0.8"

[[bench]]
name = "audio_buffer_bench"
harness = false

[[bench]]
name = "direct_effect_bench"
harness = false

[[bench]]
name = "panning_bench"
harness = false