[package]
name = "phonon"
version = "0.2.0"
edition = "2024"
categories = ["multimedia::audio"]
license = "Apache-2.0"
description = "Unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"
documentation = "https://docs.rs/phonon"
readme = "README.md"

[features]
default = []
serde-serialize = ["dep:serde", "parry3d/serde-serialize", "ndarray/serde"]
reflect = ["dep:bevy_reflect"]
firewheel = ["dep:firewheel"]

[dependencies]
derive_deref = "1"
glam = "0.30"
biquad = "0.5"
rand = "0.9"
ndarray = "0.16"
parry3d = "0.25" # todo: Enable SIMD? Replace with glam-based parry?
nalgebra = { version = "0.34", features = [
    "default",
    "convert-glam030",
] } # todo: Replace with glam after replacing parry3d
bitflags = "2"
ultraviolet = "0.10"
serde = { version = "1", optional = true }
bevy_reflect = { version = "0.17", optional = true }
sofar = "0.2.1"
firewheel = { version = "0.9", optional = true, features = [
    "std",
    "glam-30",
] }
rustfft = "6"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
plotters = "0.3"
rand = "0.9"

[[bench]]
name = "audio_buffer_bench"
harness = false

[[bench]]
name = "direct_effect_bench"
harness = false

[[bench]]
name = "panning_bench"
harness = false
