[package]
name = "phonon_bevy"
version = "0.1.0"
edition = "2024"
categories = ["multimedia::audio"]
license = "Apache-2.0"
description = "Bevy integration for the unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"
documentation = "https://docs.rs/phonon_firewheel"
readme = "README.md"

[dependencies]
# todo check dependencies/features
bevy_seedling = { version = "0.6.0", default-features = false }
bevy = { version = "0.17", default-features = false }
phonon_firewheel = { path = "../phonon_firewheel", version = "0.1", features = ["bevy"] }
firewheel = "0.8.0-rc.1"
prealloc_ref_vec = "0.1"

[dev-dependencies]
bevy-inspector-egui = "0.35.0"
bevy = { version = "0.17", default-features = false, features = [
  "std",
  "async_executor",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_post_process",
  "bevy_anti_alias",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_input_focus",
  "bevy_log",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_image",
  "bevy_mesh",
  "bevy_camera",
  "bevy_light",
  "bevy_shader",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "reflect_auto_register",
  "smaa_luts",
  "tonemapping_luts",
  "x11",
  "wayland",
  "debug",
  "zstd_rust",
] }