[package]
name = "phonon_bevy"
version = "0.1.0"
edition = "2024"
categories = ["multimedia::audio"]
license = "Apache-2.0"
description = "Bevy integration for the unofficial Steam Audio Rust rewrite"
repository = "https://github.com/GitGhillie/phonon_rs"
documentation = "https://docs.rs/phonon_firewheel"
readme = "README.md"

[dependencies]
# todo check dependencies/features
bevy_seedling = { version = "0.6.0", default-features = false }
bevy = { version = "0.17", default-features = false }
phonon_firewheel = { path = "../phonon_firewheel", version = "0.1", features = ["bevy"] }
firewheel = "0.8.0-rc.1"
prealloc_ref_vec = "0.1"

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "std",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_post_process",
  "bevy_anti_alias",
  "bevy_gilrs",
  "bevy_gltf",
  "bevy_log",
  "bevy_pbr",
  "bevy_render",
  "bevy_scene",
  "bevy_image",
  "bevy_mesh",
  "bevy_camera",
  "bevy_light",
  "bevy_window",
  "bevy_winit",
  "multi_threaded",
  "tonemapping_luts",
  "x11",
  "wayland",
  "zstd_rust",
] }